--- a/sfpd/SFPD_analysis.ipynb
+++ b/sfpd/SFPD_analysis.ipynb
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,76 +482,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coordinates = Pipe >> geoclustered.__getitem__ >> (lambda i: i[0]) >> (lambda c: \", \".join(map(str, c)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'37.78456014121181, -122.40733704162237'"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "coordinates(top100_cases[0][1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "top100_coords = Map(top100_cases) | Pipe >> (lambda ai: (ai[0], coordinates(ai[1])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2502 : 37.78456014121181, -122.40733704162237\n",
-      "2178 : 37.7751608100771, -122.40363551943442\n",
-      "2138 : 37.786409612810886, -122.40803623744476\n",
-      "1764 : 37.76505133632968, -122.41966897380142\n",
-      "1431 : 37.72694991292525, -122.47603947349434\n",
-      "1362 : 37.7839325760642, -122.4125952775858\n",
-      "1357 : 37.77871942789032, -122.4147412230519\n",
-      "1288 : 37.78445272883687, -122.40849315881205\n",
-      "1178 : 37.78000586799482, -122.41193341005336\n",
-      "1149 : 37.781654260627704, -122.41550518013351\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"\\n\".join(   Map(top100_coords[:10]) | Pipe >> (lambda c: \" : \".join(map(str, c)))  ))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Map(top100_cases) | Pipe >> (lambda i: i[1]) >> geoclustered.__getitem__ >> (lambda i: i[0]) >> (lambda c: \", \".join(map(str, c)))"
+   ]
   }
  ],
  "metadata": {
