--- a/notes.org
+++ b/notes.org
@@ -2,3 +2,13 @@
 Нужно чтобы голова начала работать в нужно направлении и производить текст
 Здесь важно не столько зацикливаться на качестве текста сколько на том получается ли текст вообще
 Дальше можно уже более сырой материал наполнять большим смыслом
+
+Я рады что все получилось так, что я не поступаю в ЕУ. Это какой-то камень с души,
+наверное мне лучше не проводить еще год в токсичной институции. С другой стороны,
+мне грустно от недоделок и я хочу с этим что-то придумать, но пока не знаю что.
+Не уверены в отстойнике, потому что там как будто бы беспорядочное гниение,
+а даже с компостом как сейчас показывает моя жизнь на Ладоге нужно все правильно
+организовать.
+
+лучше я пока отложу пандан, но не очень надолго. просто надо понять как лучше к
+этому подступиться.
